--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
         <div id="container">
             
-            <div id="header">
+            <div class="header">
             <img src="images/header.png" alt=""><br />
             <%= link_to 'New Article', new_article_path %>
             </div>
@@ -23,5 +23,34 @@
             
             <div class="cleardiv"></div>
             
+        </div>
+        <div class="footercontainer">
+            <div class="footercontent">
+                <div class="footer">
+                    <h4>Sitemap</h4>
+                <ul>
+                    <li><%= link_to 'Home', articles_path %></li>
+                    <li><a href="#">pagina 1</a></li>
+                    <li><a href="#">pagina 2</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">over</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                </div>
 
-            <div id="footer">Footer content</div>
+
+                <div class="footer">
+                <h4>Inloggen</h4>
+                <a href="#">Log in</a> en stuur je eigen artikelen!<br />
+
+                <h4>Klein contact
+                </div>
+
+                <div class="footer">
+                    
+                </div>
+                
+                <div class="cleardiv"></div>
+            </div>
+        </div>
