--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -26,5 +26,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<%= link_to 'Edit', edit_article_path(@article) %> | 
+<%= link_to 'Back', articles_path %> | <%= button_to 'Verwijderen', @article, method: :delete, data: { confirm: 'Are you sure?' } %>
