Update 1: Fixes index page and redirects routes.erb directly to articles pages. | update 2: Update gemfile lock after sudden dissapearence on server | Update 3: modifications to to the articles#index page and controller. index and controller now support calling random articles using the function @randomarticle | update 4: adds a set of js files that have not been linked to application.js.

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,6 +11,14 @@
                 
             </div>
 
+            <div class="randombutton">
+            <%= link_to 'random', @randomarticle.first%>
+            <%= javascript_tag do %>
+                window.randomOne = "<%=j @randomarticle.first.title %>";
+                
+            <% end %>
+            </div>
+
             <% @articles.sort_by{|t| - t.created_at.to_i}.first(4).each do |article| %>
                 <div class="tile">
                     <%= link_to(article) do %>
