Change some options in index and javascripts to allow randomizing content in javascript

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,6 +15,7 @@
             this is the instance of code loaded when the page loads. this content comes form the index.html file.
         </div>
             <button onclick="drama()">Push to add some drama</button>
+            <button onclick="dramaTwo()">Push to add content</button>
 
             <div class="randombutton">
             <%= link_to 'random', @randomarticle.first%>
