--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,7 +15,7 @@
             this is the instance of code loaded when the page loads. this content comes form the index.html file.
         </div>
             <button onclick="drama()">Push to add some drama</button>
-            <button onclick="dramaTwo()">Push to add content</button>
+            <button id="dramaTwo">Push to add content</button>
 
             <div class="randombutton">
             <%= link_to 'random', @randomarticle.first%>
@@ -25,8 +25,8 @@
             <% end %>
             </div>
 
-            <% @articles.sort_by{|t| - t.created_at.to_i}.first(4).each do |article| %>
-                <div class="tile">
+            <% @articles.sort_by{|t| - t.created_at.to_i}.first(4).each_with_index do |article, index| %>
+                <div class="tile" id="tile<% index %>">
                     <%= link_to(article) do %>
                     <h2><%= article.title %></h2>
                     <img src="<%= article.picture %>" alt"" />
