Adds index pages and articles pages from Ilse 2/2

--- a/app/assets/stylesheets/articles-home.css
+++ b/app/assets/stylesheets/articles-home.css
@@ -34,7 +34,7 @@ body{
 }
 
 #btn_spore{
-	background-image: url(images/btn_spore.png);
+	background-image: url(/images/btn_spore.png);
    	background-color: transparent;
    	border: none;
    	padding-left: 32px;
@@ -51,7 +51,7 @@ body{
 
 
 #btn_spore:hover{
-	background-image: url(images/btn_spore_hover.png);
+	background-image: url(/images/btn_spore_hover.png);
 }
 .spore_item{
 	width: 70px;
