--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -23,7 +23,7 @@
 	<header>
 			<!--INLOGGEN ====================================-->
 			<div id="inlog_wrapper">
-				<%= button_to 'Inloggen', '/login', :method => :get, :class => 'boven corner', :id => 'btn_inloggen' %> 
+				<button id="btn_inloggen" class="boven corner">Inloggen</button>
 				<button id="btn_registreren" class="boven corner">Registreren</button>
 			</div>
 	</header>
