--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -23,8 +23,10 @@
 	<header>
 			<!--INLOGGEN ====================================-->
 			<div id="inlog_wrapper">
-				<button id="btn_inloggen" class="boven corner">Inloggen</button>
-				<button id="btn_registreren" class="boven corner">Registreren</button>
+				<%= button_to 'Inloggen', '/login', :method => :get, :class => 'boven corner', :id => 'btn_inloggen' %>
+				<%= button_to 'Register', '/register', :method => :get, :class => 'boven corner', :id => 'btn_registeren' %>
+				<%= button_to 'Afmelden', '/logout', :method => :get, :class => 'boven corner', :id => 'btn_registeren' %> 
+				
 			</div>
 	</header>
 
