--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,16 @@
 </head>
 <body>
 
-<%= yield %>
+		<div class="container">
+
+		<% flash.each do |key, value| %>
+			<% content_tag(:div, value, class: "alert alert-#{key}") %>
+		<% end %>
+		<%= yield %>
+
+		<%= debug(params) if Rails.env.development? %>
+		</div>
 
 </body>
 </html>
+
