--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,45 @@
 			<%= button_to 'Afmelden', '/logout', :method => "delete", :class => 'boven corner', :id => 'btn_registeren' %>
 			<%= link_to "Settings", edit_user_path(current_user) %>
 	 
-		</section
+		</section>
 	</aside>
 </div>
+
+		<div class="container tophead">
+			<div class="rightblock logout">
+				<a href="#"><img src="images/logoutbutton.png" alt="log out"></a>
+			</div>
+			<div class="rightblock messagesbutton">
+				<a href="#"><img src="images/messagesbutton.png" alt=""></a>
+			</div>
+			<div class="rightblock headeruserfield">
+				Huidige Gebruiker
+			</div>
+			<div class="cleardiv"></div>
+		</div>
+
+		<div class="container userdash-top">
+			
+			<div class="leftblock avatarblock">
+				<img src="images/avatar.png" alt="" />
+			</div>
+			
+			<div class="leftblock userinfo-container">
+				<div class="userinfo-name">
+					Huidige Gebruiker
+				</div>
+				<div class="userinfo-place" onclick="placearticle()">
+					Artikel plaatsen
+				</div>
+
+			</div>
+
+			<div class="rightblock welcometext">
+				Welkom op jouw profielpagina!<br/>
+ 				<br />
+				Maak je eigen artikelen<br/>
+				Verzamel artikelen in je funbox<br/>
+			</div>
+
+			<div class="cleardiv"></div>
+		</div>
