--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,10 +18,10 @@
 
 </div>
 
-<!--Artieklen======================================================================================================-->
+<!--ARTICLES======================================================================================================-->
 
 	<header>
-			<!--INlOGGEN ====================================-->
+			<!--LOGIN ====================================-->
 			<div style="display:none;">
 				<%= link_to 'Edit', edit_article_path(@article) %> | 
 				<%= link_to 'Back', articles_path %> | <%= button_to 'Verwijderen', @article, method: :delete, data: { confirm: 'Are you sure?' } %>
@@ -40,7 +40,11 @@
 <div id="text">
 <%= @article.content %>
 </div>
-	<!-- <img src="<%= @article.picture %>"> -->
+
+<div id="picture">
+	<%= image_tag @article.picture %>
+</div>
+
 	<div id="tages"><br>
 	<b>Tags</b><br> 
 		<%= @article.tags %>
