upload functionality works, doesn't scale on the index

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -42,7 +42,7 @@
 </div>
 
 <div id="picture">
-	<%= image_tag @article.picture %>
+	<%= image_tag @article.picture_url(:thumb) %>
 </div>
 
 	<div id="tages"><br>
