--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,10 +18,10 @@
 
 </div>
 
-<!--Artikelen======================================================================================================-->
+<!--Articles======================================================================================================-->
 
 	<header>
-			<!--INLOGGEN ====================================-->
+			<!-- ====================================-->
 			<div id="inlog_wrapper">
 				<%= button_to 'Inloggen', '/login', :method => :get, :class => 'boven corner', :id => 'btn_inloggen' %>
 				<%= button_to 'Register', '/register', :method => :get, :class => 'boven corner', :id => 'btn_registeren' %>
@@ -32,15 +32,14 @@
 
 <div id="wrapper">
 
-
-
-
 <div class="artikel_wrapper">
 	<div class="artikel corner">
 		<!-- <font class="artikel_1_img"> -->
-			<img src="<%= @articles.last.picture %>" alt="Images" class="image1 corner flip">
-		<!-- </font> -->
+			<%= image_tag @articles.last.picture %>
 
+
+			<!--<img src="<%= @articles.last.picture %>" alt="Images" class="image1 corner flip">!-->
+		<!-- </font> -->
 
 			<div class="artikel_tekst_1 artikel_tekst">
 				<h3 class="title1"><%= @articles.last.title %></h3>
@@ -52,7 +51,7 @@
 	</div>
 </div>
 
-<!--RANDOM KNOP======================================================================================================-->
+<!--RANDOM BUTTON======================================================================================================-->
 <div class="artikel_wrapper random">
 		<div id="random_1" class="artikel corner">
 			<div id="random_button_wrapper">
@@ -74,7 +73,9 @@
 
 <div class="artikel_wrapper">
 	<div class="artikel corner">
-			<img src="<%= @articles[-2].picture %>" alt="Images" class="image2 corner">
+			<!--<img src="<%= @articles[-2].picture  %>" alt="Images" class="image2 corner">!-->
+			<%= image_tag @articles[-2].picture %>
+			f
 			<div class="artikel_tekst_2 artikel_tekst">
 				<h3 class="title2"><%= @articles[-2].title %></h3>
 				<div class="article2"><p><%= @articles[-2].content %></p></div>
@@ -90,7 +91,9 @@
 
 <div class="artikel_wrapper">
 	<div class="artikel corner">
-			<img src="<%= @articles[-3].picture %>" alt="Images" class="image3 corner">
+			<!--<img src="<%= @articles[-3].picture  %>" alt="Images" class="image3 corner">!-->
+			<%= image_tag @articles[-3].picture %>
+
 			<div class="artikel_tekst_3 artikel_tekst">
 				<h3 class="title3"><%= @articles[-3].title %></h3>
 				<div class="article3"><p><%= @articles[-3].content %></p></div>
@@ -104,7 +107,9 @@
 
 <div class="artikel_wrapper">
 	<div class="artikel corner">
-			<img src="<%= @articles[-4].picture %>" alt="Images" class="image4 corner">
+			<!--<img src="<%= @articles[-4].picture  %>" alt="Images" class="image4 corner">!-->
+			<%= image_tag @articles[-4].picture %>
+
 			<div class="artikel_tekst_4 artikel_tekst">
 				<h3 class="title4"><%= @articles[-4].title %></h3>
 				<div class="article4"><p><%= @articles[-4].content %></p></div>
@@ -118,7 +123,9 @@
 
 <div class="artikel_wrapper">
 	<div class="artikel corner">
-			<img src="<%= @articles[-5].picture %>" alt="Images" class="image5 corner">
+			<!--<img src="<%= @articles[-5].picture  %>" alt="Images" class="image5 corner">!-->
+			<%= image_tag @articles[-5].picture %>
+
 			<div class="artikel_tekst_5 artikel_tekst">
 				<h3 class="title5"><%= @articles[-5].title %></h3>
 				<div class="article5"><p><%= @articles[-5].content %></p></div>
