delete wireframe css and add userdash
the wireframe css is deteleted to make room for the final applications
css and the design of the user dashboard is added

--- a/app/views/dashboard/user.html.erb
+++ b/app/views/dashboard/user.html.erb
@@ -1,3 +1,74 @@
 <h1>
 	Welkom <%= current_user.name %>
 </h1>
+
+	<div id="user" class ="container">
+			<h2 class="welcome"></h2>
+		
+		<div class="avatar">
+			<img src="">
+		</div>	
+	
+	<div class="name_block">
+		<h3 class="username">Welkom <%= current_user.name %></h3>
+
+		<div class="place-article_button">
+			<button type="button">
+				<a href=""></a>
+				Plaats artikel
+			</button>
+		</div>
+	</div>
+		<div class="user_links">
+			<a href="">Eigen artikelen</a>
+			<a href="">Favorieten</a>
+		</div>
+	</div>
+
+<!--Articles============================================================!-->
+
+<div id="articles" class="container">
+
+	<div class="article_block">
+		<img class="article_tile" src="" alt="images">
+
+			<div class="text_wrapper">
+				<h3>Titel</h3>
+				<p class="article_text">
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa.
+				</p>
+			</div>
+	</div>
+	
+
+	<div class="article_block">
+		<img class="article_tile" src="" alt="images">
+			<div class="text_wrapper">
+				<h3>Titel</h3>
+				<p class="article_text">
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+				</p>
+			</div>
+	</div>
+
+	<div class="article_block">
+		<img class="article_tile" src="" alt="images">
+			<div class="text_wrapper">
+				<h3>Titel</h3>
+				<p class="article_text">
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. 
+				</p>
+			</div>
+	</div>
+
+	<div class="article_block" class="block_last">
+		<img class="article_tile" src="" alt="images">
+			<div class="text_wrapper">
+				<h3>Titel</h3>
+				<p class="article_text">
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa.
+				</p>
+			</div>
+	</div>
+
+</div>
