--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,3 +12,119 @@
  *= require_tree .
  */
 
+div, h1, h2, h3, h4, header, body, footer, p, button{
+	margin: 0px;
+	padding: 0px;
+}
+
+body{
+	font-family: 'Helvetica', sans-serif;
+}
+
+/*header=====================================================================*/
+#header.container{
+	width: 100%;
+	height: 40px;
+	padding: 0;
+	margin: 0;
+	background-color: #000000;
+}
+
+#user{
+	background-color: #;
+	height: 300px;
+	margin-bottom: 30px;
+}
+
+h2.welcome{
+	text-align: center;
+}
+
+/*dimensions and media queries===============================================*/
+#main.container{
+	width: 1000px;
+	position: absolute;
+	margin-left: -505px;
+	left: 50%;
+	padding-left:10px;
+
+
+}
+
+@media (min-width:760px) and (max-width:1010px) { 
+	#main.container{
+		width: 750px;
+		position: absolute;
+		margin-left: -380px;
+		left: 50%;
+		padding-left:10px;
+
+		}
+
+		#toelichting_wrapper{
+		max-width: 750px;
+		height: 100px;
+		margin: 0 auto; 
+		padding-left: 10px;
+		}
+
+		header{
+		max-width: 750px;
+		margin: 0 auto; 
+		padding-left: 10px;
+}
+}
+
+@media (min-width:510px) and (max-width:760px) { 
+	#main.container{
+		width: 500px;
+		position: absolute;
+		margin-left: -255px;
+		left: 50%;
+		padding-left:10px;
+
+		}
+
+		#toelichting_wrapper{
+		max-width: 500px;
+		margin: 0 auto; 
+		padding-left: 10px;
+		}
+
+		header{
+		max-width: 500px;
+		margin: 0 auto; 
+		padding-left: 10px;
+		}
+}
+
+@media  (max-width:500px) { 
+	#main.container{
+		width: 250px;
+		position: absolute;
+		margin-left: -130px;
+		left: 50%;
+		padding-left:10px;
+		}
+
+		#toelichting_wrapper{
+		max-width: 250px;
+		margin: 0 auto; 
+		padding-left: 10px;
+		}
+
+		header{
+		max-width: 250px;
+		margin: 0 auto; 
+		padding-left: 10px;
+		}
+}
+
+/*Footer*/
+#footer{
+	height: auto;
+	text-align: center;
+	background-color: #008ea0;
+	margin: 10px 0 0 0;
+	padding: 30px;
+}
