Link users/articles and fill userpage
Users can now see the articles they created and name of the user is
viewd in posts.

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -49,5 +49,9 @@
 	<b>Tags</b><br> 
 		<%= @article.tags %>
 	</div>
+	<div class="userfield">
+		user<br>
+		<%= @userName %>
+	</div>
 </div>
 </div>
