--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -27,10 +27,7 @@
     <%= f.label :tags %><br />
     <%= f.text_field :tags %>
   </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
-  </div>
+<%= f.hidden_field :user_id %> 
   <div class="actions">
     <%= f.submit %>
   </div>
